# Bi-Migrator-Looker

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: prod-mirror.yml
input/: README.md
input/sample_project/views/: event_session_facts.view.lkml  inventory_items.view.lkml  order_items.view.lkml  users.view.lkml
input/views/: distribution_centers.view.lkml
looker_migrator/common/: __init__.py  deduplication.py  logging_service.py  websocket_client.py
looker_migrator/config/: settings.py
looker_migrator/converters/: __init__.py  datatype_mapper.py  join_converter.py
looker_migrator/generators/: model_generator.py  tmdl_generator.py  view_converter.py
looker_migrator/parsers/: __init__.py
looker_migrator/templates/: Table.tmdl  model.tmdl.j2  page.section.json  pbixproj.json  relationship.tmdl  report.metadata.json  table.dataTransforms.json
looker_migrator/validators/: __init__.py  dax_validator.py  relationship_validator.py
mirror_repo/: README.md  requirements-dev.txt  requirements.txt  run_tests.py
mirror_repo/.github/workflows/: dev-security-scan.yml  prod-mirror.yml
mirror_repo/docs/: LOOKER_ROUTES.md
mirror_repo/input/sample_project/views/: events.view.lkml
mirror_repo/input/views/: event_session_funnel.view.lkml  products.view.lkml
mirror_repo/looker_migrator/: __init__.py  main.py  models.py
mirror_repo/looker_migrator/common/: calculation_tracker.py  log_utils.py
mirror_repo/looker_migrator/config/: __init__.py
mirror_repo/looker_migrator/converters/: dax_api_client.py  expression_converter.py  sql_to_dax_converter.py
mirror_repo/looker_migrator/extractors/: __init__.py  metadata_extractor.py
mirror_repo/looker_migrator/generators/: __init__.py  template_engine.py
mirror_repo/looker_migrator/parsers/: lookml_parser.py  project_parser.py
mirror_repo/looker_migrator/templates/: database.tmdl.j2  model.tmdl  page.filters.json  parameters.tmdl  relationships.tmdl.j2  table.config.json  table.query.json  table.tmdl.j2  table.visualContainer.json
mirror_repo/looker_migrator/validators/: tmdl_validator.py
mirror_repo/scripts/: batch_migration_test.py  frontend_contract_test.py  run_migration_and_compile.py
mirror_repo/scripts/compile/: compile_pbit_online.py
mirror_repo/tests/: run_migration_test.py  test_api.py  test_regression_fixes.py  test_tableau_aligned_architecture.py  test_validation.py
scripts/: __init__.py
scripts/compile/: __init__.py  convert_to_pbit.py
tests/: __init__.py  test_looker_dax_api_routes.py  test_looker_migration.py  test_pbit_compiler.py  test_single_looker_migration.py
